--- a/app/src/main/res/layout/activity_home_page.xml
+++ b/app/src/main/res/layout/activity_home_page.xml
@@ -479,14 +479,40 @@
                 </ImageView>
             </RelativeLayout>
 
-            <ImageView
-                android:id="@+id/p1Image"
+            <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="240dp"
-                android:scaleType="centerCrop"
-                android:src="@drawable/lake">
+                android:layout_height="wrap_content">
 
-            </ImageView>
+
+
+                <ImageView
+                    android:id="@+id/p1Image"
+                    android:layout_width="match_parent"
+                    android:layout_height="240dp"
+                    android:scaleType="centerCrop"
+                    android:src="@drawable/lake">
+
+                </ImageView>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/message_bar"
+                    android:layout_alignParentEnd="true"
+                    android:text="1/3"
+                    android:padding="2dp"
+                    android:paddingLeft="5dp"
+                    android:textColor="@color/white"
+                    android:backgroundTint="@color/smd_theme"
+                    android:layout_marginRight="20dp"
+                    android:layout_marginTop="8dp"
+                    >
+
+                </TextView>
+            </RelativeLayout>
+
+
+
 
             <RelativeLayout
                 android:layout_width="match_parent"
@@ -519,6 +545,16 @@
                         android:layout_marginStart="12dp"
                         android:src="@drawable/share" />
                 </LinearLayout>
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/options"
+                    android:layout_centerHorizontal="true"
+                    android:layout_centerInParent="true"
+                    app:tint="@color/smd_theme">
+
+                </ImageView>
 
                 <ImageView
                     android:id="@+id/p1Save"
@@ -615,7 +651,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="240dp"
                 android:scaleType="centerCrop"
-                android:src="@drawable/lake"   />
+                android:src="@drawable/people"   />
 
             <RelativeLayout
                 android:layout_width="match_parent"
