--- a/app/src/main/res/layout/activity_my_story_view.xml
+++ b/app/src/main/res/layout/activity_my_story_view.xml
@@ -74,8 +74,8 @@
                 android:id="@+id/highlight_date"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/highlight_title"
-                android:layout_marginStart="90dp"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="130dp"
                 android:alpha="0.8"
                 android:text="11h"
                 android:textColor="@android:color/white"
