--- a/app/src/main/res/layout/activity_home_page.xml
+++ b/app/src/main/res/layout/activity_home_page.xml
@@ -66,7 +66,6 @@
         android:layout_below="@id/topBar"
         android:background="#1A000000" />
 
-    <!-- NEW: RecyclerView for stories -->
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvStories"
         android:layout_width="match_parent"
@@ -83,304 +82,14 @@
         android:layout_below="@id/rvStories"
         android:background="#1A000000" />
 
-    <ScrollView
-        android:id="@+id/feedScroll"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rvFeed"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_below="@id/stories_bar"
         android:layout_above="@+id/bottomBar"
-        android:fillViewport="true">
-
-        <LinearLayout
-            android:id="@+id/feedColumn"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-
-            <!-- everything below here is unchanged from your feed -->
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="48dp"
-                android:paddingStart="12dp"
-                android:paddingEnd="12dp"
-                android:gravity="center_vertical">
-
-                <ImageView
-                    android:id="@+id/p1Avatar"
-                    android:layout_width="32dp"
-                    android:layout_height="32dp"
-                    android:gravity="center"
-                    android:background="@drawable/circle_bg_pink"
-                    android:src="@drawable/black_man"
-                    android:clipToOutline="true"
-                    android:scaleType="centerCrop"
-                    android:layout_centerVertical="true" />
-
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_toRightOf="@id/p1Avatar"
-                    android:layout_marginStart="8dp"
-                    android:orientation="vertical">
-
-                    <TextView
-                        android:id="@+id/p1Name"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="joshua_l"
-                        android:textStyle="bold" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Tokyo, Japan"
-                        android:textSize="12sp"
-                        android:textColor="#7A7A7A" />
-                </LinearLayout>
-
-                <ImageView
-                    android:id="@+id/p1Menu"
-                    android:layout_width="20dp"
-                    android:layout_height="20dp"
-                    android:layout_alignParentEnd="true"
-                    android:layout_centerVertical="true"
-                    android:src="@drawable/options" />
-
-                <ImageView
-                    android:id="@+id/verifiedBadge"
-                    android:layout_width="20dp"
-                    android:layout_height="20dp"
-                    android:layout_alignParentEnd="true"
-                    android:src="@drawable/verified"
-                    android:layout_marginRight="270dp"
-                    android:tint="@color/smd_theme"
-                    android:padding="3dp"
-                    tools:ignore="UseAppTint" />
-            </RelativeLayout>
-
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-                <ImageView
-                    android:id="@+id/p1Image"
-                    android:layout_width="match_parent"
-                    android:layout_height="240dp"
-                    android:scaleType="centerCrop"
-                    android:src="@drawable/lake" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:background="@drawable/message_bar"
-                    android:layout_alignParentEnd="true"
-                    android:text="1/3"
-                    android:padding="2dp"
-                    android:paddingLeft="5dp"
-                    android:textColor="@color/white"
-                    android:backgroundTint="@color/smd_theme"
-                    android:layout_marginRight="20dp"
-                    android:layout_marginTop="8dp" />
-            </RelativeLayout>
-
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="48dp"
-                android:paddingStart="8dp"
-                android:paddingEnd="8dp">
-
-                <LinearLayout
-                    android:id="@+id/p1ActionsLeft"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:gravity="center_vertical"
-                    android:orientation="horizontal">
-
-                    <ImageView
-                        android:id="@+id/like"
-                        android:layout_width="20dp"
-                        android:layout_height="24dp"
-                        android:src="@drawable/like" />
-
-                    <ImageView
-                        android:layout_width="24dp"
-                        android:layout_height="24dp"
-                        android:layout_marginStart="12dp"
-                        android:src="@drawable/comment" />
-
-                    <ImageView
-                        android:layout_width="24dp"
-                        android:layout_height="24dp"
-                        android:layout_marginStart="12dp"
-                        android:src="@drawable/share" />
-                </LinearLayout>
-
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/options"
-                    android:layout_centerHorizontal="true"
-                    android:layout_centerInParent="true"
-                    app:tint="@color/smd_theme" />
-
-                <ImageView
-                    android:id="@+id/p1Save"
-                    android:layout_width="24dp"
-                    android:layout_height="24dp"
-                    android:layout_alignParentEnd="true"
-                    android:layout_centerVertical="true"
-                    android:src="@drawable/save" />
-            </RelativeLayout>
-
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/oval"
-                    android:id="@+id/liked_by"
-                    android:layout_marginLeft="10dp" />
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:paddingStart="12dp"
-                    android:paddingEnd="12dp"
-                    android:text="Liked by craig_love and 44,686 others"
-                    android:textStyle="bold"
-                    android:layout_marginLeft="25dp" />
-            </RelativeLayout>
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:paddingStart="12dp"
-                android:paddingEnd="12dp"
-                android:paddingBottom="16dp"
-                android:text="joshua_l  The game in Japan was amazing and I want to share some photos" />
-
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="48dp"
-                android:paddingStart="12dp"
-                android:paddingEnd="12dp"
-                android:gravity="center_vertical">
-
-                <ImageView
-                    android:id="@+id/p2Avatar"
-                    android:layout_width="32dp"
-                    android:layout_height="32dp"
-                    android:gravity="center"
-                    android:background="@drawable/story_bg"
-                    android:src="@drawable/italian_man"
-                    android:clipToOutline="true"
-                    android:scaleType="centerCrop"
-                    android:layout_centerVertical="true" />
-
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_toRightOf="@id/p2Avatar"
-                    android:layout_marginStart="8dp"
-                    android:orientation="vertical">
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="alex_k"
-                        android:textStyle="bold" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Berlin, Germany"
-                        android:textSize="12sp"
-                        android:textColor="#7A7A7A" />
-                </LinearLayout>
-
-                <ImageView
-                    android:layout_width="20dp"
-                    android:layout_height="20dp"
-                    android:layout_alignParentEnd="true"
-                    android:layout_centerVertical="true"
-                    android:src="@drawable/options" />
-            </RelativeLayout>
-
-            <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="240dp"
-                android:scaleType="centerCrop"
-                android:src="@drawable/people" />
-
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="48dp"
-                android:paddingStart="8dp"
-                android:paddingEnd="8dp">
-
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:gravity="center_vertical"
-                    android:orientation="horizontal">
-
-                    <ImageView
-                        android:layout_width="20dp"
-                        android:layout_height="24dp"
-                        android:src="@drawable/like" />
-
-                    <ImageView
-                        android:layout_width="24dp"
-                        android:layout_height="24dp"
-                        android:layout_marginStart="12dp"
-                        android:src="@drawable/comment" />
-
-                    <ImageView
-                        android:layout_width="24dp"
-                        android:layout_height="24dp"
-                        android:layout_marginStart="12dp"
-                        android:src="@drawable/share" />
-                </LinearLayout>
-
-                <ImageView
-                    android:layout_width="24dp"
-                    android:layout_height="24dp"
-                    android:layout_alignParentEnd="true"
-                    android:layout_centerVertical="true"
-                    android:src="@drawable/save" />
-            </RelativeLayout>
-
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/oval"
-                    android:layout_marginLeft="10dp" />
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:paddingStart="12dp"
-                    android:paddingEnd="12dp"
-                    android:text="Liked by jenny and 1,203 others"
-                    android:textStyle="bold"
-                    android:layout_marginLeft="25dp" />
-            </RelativeLayout>
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:paddingStart="12dp"
-                android:paddingEnd="12dp"
-                android:paddingBottom="16dp"
-                android:text="alex_k  Sunday brunch vibes." />
-        </LinearLayout>
-    </ScrollView>
+        android:clipToPadding="false"
+        android:paddingBottom="8dp"/>
 
     <RelativeLayout
         android:id="@+id/bottomBar"
