--- a/app/src/main/res/layout/activity_posting.xml
+++ b/app/src/main/res/layout/activity_posting.xml
@@ -138,182 +138,14 @@
 
     </RelativeLayout>
 
-    <ScrollView
-        android:id="@+id/gallery_scroll"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/galleryGrid"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_below="@id/preview_container"
-        android:layout_above="@id/bottom_tabs">
+        android:layout_above="@id/bottom_tabs"
+        android:padding="2dp" />
 
-        <LinearLayout
-            android:id="@+id/gallery_container"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:weightSum="4">
-
-                <ImageView
-                    android:layout_width="0dp"
-                    android:layout_height="100dp"
-                    android:layout_weight="1"
-                    android:layout_margin="1dp"
-                    android:scaleType="centerCrop"
-                    android:src="@drawable/black_man"/>
-
-                <ImageView
-                    android:layout_width="0dp"
-                    android:layout_height="100dp"
-                    android:layout_weight="1"
-                    android:layout_margin="1dp"
-                    android:scaleType="centerCrop"
-                    android:src="@drawable/italian_man"/>
-
-                <ImageView
-                    android:layout_width="0dp"
-                    android:layout_height="100dp"
-                    android:layout_weight="1"
-                    android:layout_margin="1dp"
-                    android:scaleType="centerCrop"
-                    android:src="@drawable/man_coffee"/>
-
-                <ImageView
-                    android:layout_width="0dp"
-                    android:layout_height="100dp"
-                    android:layout_weight="1"
-                    android:layout_margin="1dp"
-                    android:scaleType="centerCrop"
-                    android:src="@drawable/oval"/>
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:weightSum="4">
-
-                <ImageView
-                    android:layout_width="0dp"
-                    android:layout_height="100dp"
-                    android:layout_weight="1"
-                    android:layout_margin="1dp"
-                    android:scaleType="centerCrop"
-                    android:src="@drawable/karenne"/>
-
-                <ImageView
-                    android:layout_width="0dp"
-                    android:layout_height="100dp"
-                    android:layout_weight="1"
-                    android:layout_margin="1dp"
-                    android:scaleType="centerCrop"
-                    android:src="@drawable/white_woman"/>
-
-                <ImageView
-                    android:layout_width="0dp"
-                    android:layout_height="100dp"
-                    android:layout_weight="1"
-                    android:layout_margin="1dp"
-                    android:scaleType="centerCrop"
-                    android:src="@drawable/white_woman"/>
-
-                <ImageView
-                    android:layout_width="0dp"
-                    android:layout_height="100dp"
-                    android:layout_weight="1"
-                    android:layout_margin="1dp"
-                    android:scaleType="centerCrop"
-                    android:src="@drawable/karenne"/>
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:weightSum="4">
-
-                <ImageView
-                    android:layout_width="0dp"
-                    android:layout_height="100dp"
-                    android:layout_weight="1"
-                    android:layout_margin="1dp"
-                    android:scaleType="centerCrop"
-                    android:src="@drawable/lake"/>
-
-                <ImageView
-                    android:layout_width="0dp"
-                    android:layout_height="100dp"
-                    android:layout_weight="1"
-                    android:layout_margin="1dp"
-                    android:scaleType="centerCrop"
-                    android:src="@drawable/person1"/>
-
-                <ImageView
-                    android:layout_width="0dp"
-                    android:layout_height="100dp"
-                    android:layout_weight="1"
-                    android:layout_margin="1dp"
-                    android:scaleType="centerCrop"
-                    android:src="@drawable/lake"/>
-
-                <ImageView
-                    android:layout_width="0dp"
-                    android:layout_height="100dp"
-                    android:layout_weight="1"
-                    android:layout_margin="1dp"
-                    android:scaleType="centerCrop"
-                    android:src="@drawable/person1"/>
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:weightSum="4">
-
-                <ImageView
-                    android:layout_width="0dp"
-                    android:layout_height="100dp"
-                    android:layout_weight="1"
-                    android:layout_margin="1dp"
-                    android:scaleType="centerCrop"
-                    android:src="@drawable/lake"/>
-
-                <ImageView
-                    android:layout_width="0dp"
-                    android:layout_height="100dp"
-                    android:layout_weight="1"
-                    android:layout_margin="1dp"
-                    android:scaleType="centerCrop"
-                    android:src="@drawable/person1"/>
-
-                <ImageView
-                    android:layout_width="0dp"
-                    android:layout_height="100dp"
-                    android:layout_weight="1"
-                    android:layout_margin="1dp"
-                    android:scaleType="centerCrop"
-                    android:src="@drawable/lake"/>
-
-                <ImageView
-                    android:layout_width="0dp"
-                    android:layout_height="100dp"
-                    android:layout_weight="1"
-                    android:layout_margin="1dp"
-                    android:scaleType="centerCrop"
-                    android:src="@drawable/person1"/>
-
-            </LinearLayout>
-
-        </LinearLayout>
-
-    </ScrollView>
 
     <LinearLayout
         android:id="@+id/bottom_tabs"
