--- a/app/src/main/res/layout/item_post.xml
+++ b/app/src/main/res/layout/item_post.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
@@ -117,8 +118,12 @@
         android:paddingStart="12dp"
         android:paddingEnd="12dp"
         android:paddingTop="6dp"
-        android:text="user1  comment one"
-        android:visibility="gone"/>
+        android:textColor="#FF000000"
+        android:maxLines="2"
+        android:ellipsize="end"
+        android:visibility="gone"
+        tools:visibility="visible"
+        tools:text="tester: awesome"/>
 
     <TextView
         android:id="@+id/tvComment2"
@@ -126,8 +131,13 @@
         android:layout_height="wrap_content"
         android:paddingStart="12dp"
         android:paddingEnd="12dp"
-        android:text="user2  comment two"
-        android:visibility="gone"/>
+        android:paddingTop="2dp"
+        android:textColor="#FF000000"
+        android:maxLines="2"
+        android:ellipsize="end"
+        android:visibility="gone"
+        tools:visibility="visible"
+        tools:text="anotherUser: wow 🔥"/>
 
     <!-- View all comments -->
     <TextView
@@ -136,9 +146,10 @@
         android:layout_height="wrap_content"
         android:paddingStart="12dp"
         android:paddingEnd="12dp"
+        android:paddingTop="4dp"
         android:paddingBottom="12dp"
         android:text="View all comments"
         android:textColor="#7A7A7A"
-        android:visibility="gone"/>
-
+        android:visibility="gone"
+        tools:visibility="visible"/>
 </LinearLayout>
