--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -8,11 +8,15 @@
     android:background="@color/white"
     tools:context=".chat">
 
+    <!-- Header Background -->
     <LinearLayout
+        android:id="@+id/header_bar"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:background="#F8F8F8">
-
+        android:layout_alignParentTop="true"
+        android:background="#F8F8F8"
+        android:orientation="horizontal">
+        <!-- This is just a background, content is overlaid -->
     </LinearLayout>
 
     <ImageView
@@ -39,9 +43,7 @@
         android:backgroundTint="@color/smd_theme"
         android:textSize="12sp"
         android:textStyle="bold"
-        android:textColor="@color/white"
-
-        />
+        android:textColor="@color/white"/>
 
     <TextView
         android:id="@+id/username"
@@ -50,14 +52,14 @@
         android:layout_toEndOf="@id/avatar"
         android:layout_marginStart="8dp"
         android:layout_marginTop="14dp"
-        android:text="internshala"
+        android:text="Username"
         android:textSize="16sp"
         android:textStyle="bold"
         android:textColor="@color/black"
         android:fontFamily="@font/instagram_sans_headline"/>
 
     <ImageView
-        android:id="@+id/video"
+        android:id="@+id/info"
         android:layout_width="28dp"
         android:layout_height="28dp"
         android:layout_alignParentEnd="true"
@@ -67,52 +69,50 @@
         app:tint="@color/smd_theme" />
 
     <ImageView
-        android:id="@+id/info"
+        android:id="@+id/voice"
         android:layout_width="28dp"
         android:layout_height="28dp"
         android:layout_toStartOf="@id/video"
         android:layout_marginEnd="12dp"
         android:layout_marginTop="12dp"
+        android:src="@drawable/ic_call" />
+
+
+    <ImageView
+        android:id="@+id/video"
+        android:layout_width="28dp"
+        android:layout_height="28dp"
+        android:layout_toStartOf="@id/info"
+        android:layout_marginEnd="12dp"
+        android:layout_marginTop="12dp"
         android:src="@drawable/call_real" />
 
-    <TextView
-        android:id="@+id/time"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="4:49 PM"
-        android:textColor="#8A8A8A"
-        android:textSize="12sp"
-        android:layout_centerHorizontal="true"
-        android:layout_above="@id/helloPill"
-        android:layout_marginBottom="15dp"
-        android:fontFamily="@font/instagram_sans_bold"/>
+    <!--
+    FIX: The RecyclerView now correctly fills the space between the header and the input field.
+    The conflicting Button has been removed.
+    -->
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/messagesRecyclerView"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_below="@id/header_bar"
+        android:layout_above="@id/inputField"
+        android:paddingStart="12dp"
+        android:paddingEnd="12dp"
+        android:clipToPadding="false"
+        android:paddingTop="8dp"
+        android:paddingBottom="8dp"/>
 
-
-    <Button
-        android:id="@+id/helloPill"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello"
-        android:textAllCaps="false"
-        android:textColor="@color/white"
-        android:textSize="16dp"
-        android:gravity="center"
-        android:backgroundTint="@color/smd_theme"
-        android:layout_alignParentEnd="true"
-        android:layout_marginEnd="12dp"
-        android:layout_above="@+id/inputField"
-        android:layout_marginBottom="12dp"
-        android:clickable="true"
-        android:focusable="true"/>
-
-
+    <!-- Input field area -->
     <RelativeLayout
-        android:layout_width="350dp"
+        android:id="@+id/inputField"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="20dp"
-        android:id="@+id/inputField">
+        android:paddingTop="5dp"
+        android:paddingBottom="10dp"
+        android:paddingStart="10dp"
+        android:paddingEnd="10dp">
 
         <EditText
             android:id="@+id/message_input"
@@ -120,49 +120,70 @@
             android:layout_height="wrap_content"
             android:background="@drawable/message_bar"
             android:hint="Message..."
-            android:textColorHint="@color/gray"
+            android:imeOptions="actionSend"
+            android:inputType="text"
             android:paddingStart="50dp"
             android:paddingEnd="120dp"
-            android:inputType="text"/>
+            android:paddingTop="12dp"
+            android:paddingBottom="12dp"
+            android:textColorHint="@color/gray" />
 
         <ImageView
             android:id="@+id/cameraIcon"
             android:layout_width="30dp"
-            android:layout_height="44dp"
+            android:layout_height="0dp"
+            android:layout_alignTop="@id/message_input"
+            android:layout_alignBottom="@id/message_input"
             android:layout_alignParentStart="true"
             android:layout_centerVertical="true"
-            android:layout_marginLeft="5dp"
+            android:layout_marginStart="8dp"
             android:src="@drawable/camera_circle"/>
+
+        <!-- Send Button -->
+        <ImageView
+            android:id="@+id/sendButton"
+            android:layout_width="24dp"
+            android:layout_height="0dp"
+            android:layout_alignTop="@id/message_input"
+            android:layout_alignBottom="@id/message_input"
+            android:layout_alignParentEnd="true"
+            android:layout_centerVertical="true"
+            android:layout_marginEnd="8dp"
+            android:src="@drawable/ic_send"
+            app:tint="@color/smd_theme" />
 
         <ImageView
             android:id="@+id/stickersIcon"
             android:layout_width="24dp"
-            android:layout_height="44dp"
-            android:layout_alignParentEnd="true"
+            android:layout_height="0dp"
+            android:layout_alignTop="@id/message_input"
+            android:layout_alignBottom="@id/message_input"
+            android:layout_toStartOf="@id/sendButton"
             android:layout_centerVertical="true"
-            android:layout_marginRight="10dp"
+            android:layout_marginEnd="10dp"
             android:src="@drawable/stickers"/>
 
         <ImageView
             android:id="@+id/gallery"
             android:layout_width="20dp"
-            android:layout_height="44dp"
+            android:layout_height="0dp"
+            android:layout_alignTop="@id/message_input"
+            android:layout_alignBottom="@id/message_input"
             android:layout_toStartOf="@id/stickersIcon"
             android:layout_centerVertical="true"
             android:src="@drawable/picture"
-            android:layout_marginRight="10dp"/>
+            android:layout_marginEnd="10dp"/>
 
         <ImageView
             android:id="@+id/extraIcon"
             android:layout_width="22dp"
-            android:layout_height="44dp"
+            android:layout_height="0dp"
+            android:layout_alignTop="@id/message_input"
+            android:layout_alignBottom="@id/message_input"
             android:layout_toStartOf="@id/gallery"
             android:layout_centerVertical="true"
             android:src="@drawable/mic"
-            android:layout_marginRight="10dp"/>
+            android:layout_marginEnd="10dp"/>
 
     </RelativeLayout>
-
-
-
 </RelativeLayout>
